--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,9 @@ language: go
 go:
   - 1.5
   - tip
+
+install:
+  - export PATH=$PATH:$HOME/gopath/bin
+  - go get github.com/tools/godep
+  - godep restore
+  - GO15VENDOREXPERIMENT=1  
