--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ go:
 
 install:
   - export PATH=$PATH:$HOME/gopath/bin
+  - export GO15VENDOREXPERIMENT=1
   - go get github.com/tools/godep
-  - godep restore
-  - GO15VENDOREXPERIMENT=1  
+  - godep get "gopkg.in/yaml.v2" 
+  - godep save
