--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: go
 
 go:
-  - 1.5
-  - tip
+  - 1.7.x
+  - 1.8.x
+  - master
 
 install:
-  - export PATH=$PATH:$HOME/gopath/bin
-  - export GO15VENDOREXPERIMENT=1
+  - go get "github.com/kardianos/govendor"
   - go get github.com/tools/godep
   - godep get "gopkg.in/yaml.v2" 
   - godep save
+
+script:
+  - make
